Introduction de la généricité

--- a/src/DP/SimpleFactoryBundle/Resources/views/Default/index.html.twig
+++ b/src/DP/SimpleFactoryBundle/Resources/views/Default/index.html.twig
@@ -8,3 +8,6 @@
         {{ pizza.emballer | raw }}
     </p>
 {% endfor %}
+{% for error in errors %}
+    <p style="color: red"> {{ error }}</p>
+{% endfor %}
